--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,15 +8,15 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="mb-4">
-        <%= f.label :email, class: "block text-gray-700 font-bold mb-2" %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+        <%= f.label :email, class: "block text-gray-700 dark:text-gray-200 font-bold mb-2" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block w-full px-3 py-2 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
       </div>
 
       <div class="text-center">
         <%= f.submit "Send me reset password instructions", class: "w-full py-2 px-4 bg-blue-500 hover:bg-blue-600 text-white font-bold rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
       </div>
 
-    <div class="mt-4 text-center text-gray-500">
+    <div class="mt-4 text-center text-gray-500 dark:text-gray-400">
       <%= render "devise/shared/links" %>
     </div>
     <% end %>
