--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,31 +1,31 @@
 <%- if controller_name != 'sessions' %>
   <div class="button-container flex justify-center">
-    <p class="text-gray-600 mr-2">Already have an account with us?</p>
+    <p class="text-gray-600 dark:text-gray-300 mr-2">Already have an account with us?</p>
     <%= link_to "Log in", new_session_path(resource_name), class: "text-blue-500 hover:text-blue-700 underline" %>
   </div>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <div class="button-container flex justify-center">
-    <p class="text-gray-600 mr-2">New to our site?</p>
+    <p class="text-gray-600 dark:text-gray-300 mr-2">New to our site?</p>
     <%= link_to "Sign up", new_registration_path(resource_name), class: "text-blue-500 hover:text-blue-700 underline" %>
   </div>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <p class="text-center text-gray-500">
+  <p class="text-center text-gray-500 dark:text-gray-400">
     <%= link_to "Forgot your password?", new_password_path(resource_name), class: "hover:underline" %>
   </p>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <p class="text-center text-gray-500">
+  <p class="text-center text-gray-500 dark:text-gray-400">
     <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: "hover:underline" %>
   </p>
 <% end %>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <p class="text-center text-gray-500">
+  <p class="text-center text-gray-500 dark:text-gray-400">
     <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: "hover:underline" %>
   </p>
 <% end %>
