--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -3,5 +3,5 @@
 
   <%= render "form", tag: @tag %>
 
-  <%= link_to "Back to tags", tags_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Back to tags", tags_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 dark:bg-gray-800 inline-block font-medium" %>
 </div>
