--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -6,10 +6,10 @@
 
     <%= render @tag %>
 
-    <%= link_to "Edit this tag", edit_tag_path(@tag), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to "Back to tags", tags_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to "Edit this tag", edit_tag_path(@tag), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 dark:bg-gray-800 inline-block font-medium" %>
+    <%= link_to "Back to tags", tags_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 dark:bg-gray-800 inline-block font-medium" %>
     <div class="inline-block ml-2">
-      <%= button_to "Destroy this tag", @tag, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+      <%= button_to "Destroy this tag", @tag, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 dark:bg-gray-800 font-medium" %>
     </div>
   </div>
 </div>
